snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf.pom.sha256
15e9c0bd9c4886b149cbaf9cca5245175a2ad774ebffbe52f1a3c096ecb6bed5